--- a/blueprint-lgtv-shield-input3.yaml
+++ b/blueprint-lgtv-shield-input3.yaml
@@ -7,11 +7,8 @@ blueprint:
       name: Shield Input Source
       description: Select the source input that you want the Shield to switch to.
       selector:
-          attribute: "source_list"
-          entity:
-            domain: media_player
-            device_id: f43d557a022ca182178f872d45499988
-            integration: android_tv
+        attribute:
+          entity_id: media_player.android_tv_192_168_1_41
 sequence:
   - choose:
       - conditions:
