--- a/blueprint-lgtv-shield-input6.yaml
+++ b/blueprint-lgtv-shield-input6.yaml
@@ -7,8 +7,8 @@ blueprint:
       name: Shield Input Source
       description: Select the source input that you want the Shield to switch to.
       selector:
-        attribute:
-          entity_id: media_player.android_tv_192_168_1_41.source_list
+        template:
+          {{ state_attr('media_player.android_tv_192_168_1_41', 'source_list') }}
 sequence:
   - choose:
       - conditions:
