--- a/blueprint-lgtv-shield-input7.yaml
+++ b/blueprint-lgtv-shield-input7.yaml
@@ -8,7 +8,7 @@ blueprint:
       description: Select the source input that you want the Shield to switch to.
       selector:
         template:
-          {{ state_attr('media_player.android_tv_192_168_1_41', 'source_list') }}
+          [{{ state_attr('media_player.android_tv_192_168_1_41', 'source_list') }}]
 sequence:
   - choose:
       - conditions:
