--- a/blueprint_room_climate_control.yaml
+++ b/blueprint_room_climate_control.yaml
@@ -24,7 +24,7 @@ blueprint:
       description: Input helper to retrieve the scheduled setpoint temperature.
       selector:
         entity:
-          domain: sensor
+          domain: input_number
     delta_above_10:
       name: Delta for >10°C
       description: Adjustment to setpoint when external temperature is above 10°C.
@@ -74,25 +74,25 @@ trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: state
-    entity_id: !input thermostat
+    entity_id: "{{ thermostat }}"
     attribute: temperature
 
 condition:
   - condition: state
-    entity_id: !input holiday_mode
+    entity_id: "{{ holiday_mode }}"
     state: "off"
   - condition: state
-    entity_id: !input occupancy_sensor
+    entity_id: "{{ occupancy_sensor }}"
     state: "off"
     for:
       minutes: 30
   - condition: template
-    value_template: "{{ states(!input external_temperature) | float < 10 }}"
+    value_template: "{{ states(external_temperature) | float < 10 }}"
 
 action:
   - variables:
-      current_temperature: "{{ states(!input external_temperature) | float }}"
-      scheduled_setpoint: "{{ states(!input scheduled_setpoint) | float }}"
+      current_temperature: "{{ states(external_temperature) | float }}"
+      scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
@@ -101,9 +101,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_above_10 }}"
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -112,9 +112,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_10_to_5 }}"
+              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -122,9 +122,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_5_to_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -132,13 +132,13 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_below_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
     target:
-      entity_id: !input thermostat
+      entity_id: "{{ thermostat }}"
     data:
       temperature: "{{ scheduled_setpoint }}"
