--- a/blueprint_room_climate_control_v3.yaml
+++ b/blueprint_room_climate_control_v3.yaml
@@ -74,15 +74,15 @@ trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: state
-    entity_id: !input thermostat
+    entity_id: !input "var_thermostat"
     attribute: temperature
 
 condition:
   - condition: state
-    entity_id: !input holiday_mode
+    entity_id: !input "var_holiday_mode"
     state: "off"
   - condition: state
-    entity_id: !input occupancy_sensor
+    entity_id: !input "var_occupancy_sensor"
     state: "off"
     for:
       minutes: 30
