--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -5,27 +5,27 @@ blueprint:
     and specific conditions.
   domain: automation
   input:
-    thermostat:
+    var_thermostat:
       name: Target Thermostat
       description: Select the thermostat to control.
       selector:
         entity:
           integration: ramses_cc
           domain: climate
-    external_temperature:
+    var_external_temperature:
       name: External Temperature Sensor
       description: Select the external temperature sensor.
       selector:
         entity:
           domain: sensor
           device_class: temperature
-    scheduled_setpoint:
-      name: Scheduled Setpoint Helper
-      description: Input helper to retrieve the scheduled setpoint temperature.
+    var_scheduled_setpoint:
+      name: Scheduled Setpoint Sensor
+      description: Sensor to retrieve the scheduled setpoint temperature.
       selector:
         entity:
           domain: sensor
-    delta_above_10:
+    var_delta_above_10:
       name: Delta for >10°C
       description: Adjustment to setpoint when external temperature is above 10°C.
       selector:
@@ -33,7 +33,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    delta_10_to_5:
+    var_delta_10_to_5:
       name: Delta for 10°C to 5°C
       description: Adjustment to setpoint when external temperature is between 10°C and 5°C.
       selector:
@@ -41,7 +41,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    delta_5_to_0:
+    var_delta_5_to_0:
       name: Delta for 5°C to 0°C
       description: Adjustment to setpoint when external temperature is between 5°C and 0°C.
       selector:
@@ -49,7 +49,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    delta_below_0:
+    var_delta_below_0:
       name: Delta for <0°C
       description: Adjustment to setpoint when external temperature is below 0°C.
       selector:
@@ -57,13 +57,13 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    holiday_mode:
+    var_holiday_mode:
       name: Holiday Mode Toggle
       description: Entity to represent Holiday Mode status.
       selector:
         entity:
           domain: input_boolean
-    occupancy_sensor:
+    var_occupancy_sensor:
       name: Occupancy Sensor
       description: Sensor to check if the home is occupied.
       selector:
@@ -74,25 +74,25 @@ trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: state
-    entity_id: !input "var_thermostat"
+    entity_id: !input var_thermostat
     attribute: temperature
 
 condition:
   - condition: state
-    entity_id: !input "var_holiday_mode"
+    entity_id: !input var_holiday_mode
     state: "off"
   - condition: state
-    entity_id: !input "var_occupancy_sensor"
+    entity_id: !input var_occupancy_sensor
     state: "off"
     for:
       minutes: 30
   - condition: template
-    value_template: "{{ states(!input external_temperature) | float < 10 }}"
+    value_template: "{{ states(var_external_temperature) | float < 10 }}"
 
 action:
   - variables:
-      current_temperature: "{{ states(!input external_temperature) | float }}"
-      scheduled_setpoint: "{{ states(!input scheduled_setpoint) | float }}"
+      current_temperature: "{{ states(var_external_temperature) | float }}"
+      scheduled_setpoint: "{{ states(var_scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
@@ -101,9 +101,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: !input var_thermostat
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_above_10 }}"
+              temperature: "{{ scheduled_setpoint + var_delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -112,9 +112,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: !input var_thermostat
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_10_to_5 }}"
+              temperature: "{{ scheduled_setpoint + var_delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -122,9 +122,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: !input var_thermostat
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_5_to_0 }}"
+              temperature: "{{ scheduled_setpoint + var_delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -132,13 +132,13 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: !input var_thermostat
             data:
-              temperature: "{{ scheduled_setpoint + !input delta_below_0 }}"
+              temperature: "{{ scheduled_setpoint + var_delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
     target:
-      entity_id: !input thermostat
+      entity_id: !input var_thermostat
     data:
       temperature: "{{ scheduled_setpoint }}"
