--- a/blueprint_room_climate_control_v1.yaml
+++ b/blueprint_room_climate_control_v1.yaml
@@ -33,6 +33,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
+          default: 0
     var_delta_10_to_5:
       name: Delta for 10°C to 5°C
       description: Adjustment to setpoint when external temperature is between 10°C and 5°C.
@@ -41,6 +42,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
+          default: 0
     var_delta_5_to_0:
       name: Delta for 5°C to 0°C
       description: Adjustment to setpoint when external temperature is between 5°C and 0°C.
@@ -49,6 +51,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
+          default: 0
     var_delta_below_0:
       name: Delta for <0°C
       description: Adjustment to setpoint when external temperature is below 0°C.
@@ -57,6 +60,7 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
+          default: 0
     var_holiday_mode:
       name: Holiday Mode Toggle
       description: Entity to represent Holiday Mode status.
@@ -83,7 +87,7 @@ condition:
     state: "off"
   - condition: state
     entity_id: !input var_occupancy_sensor
-    state: "off"
+    state: "on"
     for:
       minutes: 30
   - condition: template
