--- a/blueprint_room_climate_control_v4.yaml
+++ b/blueprint_room_climate_control_v4.yaml
@@ -5,27 +5,27 @@ blueprint:
     and specific conditions.
   domain: automation
   input:
-    var_thermostat:
+    thermostat:
       name: Target Thermostat
       description: Select the thermostat to control.
       selector:
         entity:
           integration: ramses_cc
           domain: climate
-    var_external_temperature:
+    external_temperature:
       name: External Temperature Sensor
       description: Select the external temperature sensor.
       selector:
         entity:
           domain: sensor
           device_class: temperature
-    var_scheduled_setpoint:
+    scheduled_setpoint:
       name: Scheduled Setpoint Sensor
       description: Sensor to retrieve the scheduled setpoint temperature.
       selector:
         entity:
           domain: sensor
-    var_delta_above_10:
+    delta_above_10:
       name: Delta for >10°C
       description: Adjustment to setpoint when external temperature is above 10°C.
       selector:
@@ -33,7 +33,8 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    var_delta_10_to_5:
+          default: 0
+    delta_10_to_5:
       name: Delta for 10°C to 5°C
       description: Adjustment to setpoint when external temperature is between 10°C and 5°C.
       selector:
@@ -41,7 +42,8 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    var_delta_5_to_0:
+          default: 0
+    delta_5_to_0:
       name: Delta for 5°C to 0°C
       description: Adjustment to setpoint when external temperature is between 5°C and 0°C.
       selector:
@@ -49,7 +51,8 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    var_delta_below_0:
+          default: 0
+    delta_below_0:
       name: Delta for <0°C
       description: Adjustment to setpoint when external temperature is below 0°C.
       selector:
@@ -57,13 +60,14 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-    var_holiday_mode:
+          default: 0
+    holiday_mode:
       name: Holiday Mode Toggle
       description: Entity to represent Holiday Mode status.
       selector:
         entity:
           domain: input_boolean
-    var_occupancy_sensor:
+    occupancy_sensor:
       name: Occupancy Sensor
       description: Sensor to check if the home is occupied.
       selector:
@@ -72,29 +76,27 @@ blueprint:
 
 trigger:
   - platform: time_pattern
-    minutes: "/5"
+    minutes: "/15"
   - platform: state
-    entity_id: !input var_thermostat
+    entity_id: !input thermostat
     attribute: temperature
 
 condition:
   - condition: state
-    entity_id: !input var_holiday_mode
+    entity_id: !input holiday_mode
     state: "off"
   - condition: state
-    entity_id: !input var_occupancy_sensor
-    state: "on"
+    entity_id: !input occupancy_sensor
+    state: "off"
     for:
       minutes: 30
   - condition: template
-    value_template: "{{ states(var_external_temperature) | float < 10 }}"
+    value_template: "{{ states(external_temperature) | float < 10 }}"
 
 action:
   - variables:
-      external_temperature: !input var_external_temperature
-      thermostat_setpoint: !input var_scheduled_setpoint
       current_temperature: "{{ states(external_temperature) | float }}"
-      scheduled_setpoint: "{{ states(thermostat_setpoint) | float }}"
+      scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
@@ -103,9 +105,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input var_thermostat
+              entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_above_10 }}"
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -114,9 +116,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input var_thermostat
+              entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_10_to_5 }}"
+              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -124,9 +126,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input var_thermostat
+              entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_5_to_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -134,13 +136,13 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input var_thermostat
+              entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_below_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
     target:
-      entity_id: !input var_thermostat
+      entity_id: !input thermostat
     data:
       temperature: "{{ scheduled_setpoint }}"
