--- a/blueprint_room_climate_control_v4.yaml
+++ b/blueprint_room_climate_control_v4.yaml
@@ -33,7 +33,6 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-          default: 0
     delta_10_to_5:
       name: Delta for 10°C to 5°C
       description: Adjustment to setpoint when external temperature is between 10°C and 5°C.
@@ -42,7 +41,6 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-          default: 0
     delta_5_to_0:
       name: Delta for 5°C to 0°C
       description: Adjustment to setpoint when external temperature is between 5°C and 0°C.
@@ -51,7 +49,6 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-          default: 0
     delta_below_0:
       name: Delta for <0°C
       description: Adjustment to setpoint when external temperature is below 0°C.
@@ -60,7 +57,6 @@ blueprint:
           min: -3
           max: 3
           step: 0.5
-          default: 0
     holiday_mode:
       name: Holiday Mode Toggle
       description: Entity to represent Holiday Mode status.
@@ -82,6 +78,11 @@ trigger:
     attribute: temperature
 
 condition:
+  - variables:
+      external_temperature: !input external_temperature
+      scheduled_setpoint: !input scheduled_setpoint
+      current_temperature: "{{ states(external_temperature) | float }}"
+      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
   - condition: state
     entity_id: !input holiday_mode
     state: "off"
@@ -95,8 +96,10 @@ condition:
 
 action:
   - variables:
+      external_temperature: !input external_temperature
+      scheduled_setpoint: !input scheduled_setpoint
       current_temperature: "{{ states(external_temperature) | float }}"
-      scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
+      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
@@ -107,7 +110,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
+              temperature: "{{ current_scheduled_setpoint + delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -118,7 +121,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
+              temperature: "{{ current_scheduled_setpoint + delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -128,7 +131,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
+              temperature: "{{ current_scheduled_setpoint + delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -138,11 +141,11 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
+              temperature: "{{ current_scheduled_setpoint + delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
     target:
       entity_id: !input thermostat
     data:
-      temperature: "{{ scheduled_setpoint }}"
+      temperature: "{{ current_scheduled_setpoint }}"
