Update and rename blueprint_room_climate_control_v6.yaml to blueprint_room_climate_control_v7.yaml

--- a/blueprint_room_climate_control_v7.yaml
+++ b/blueprint_room_climate_control_v7.yaml
@@ -81,8 +81,8 @@ condition:
   - variables:
       external_temperature: !input external_temperature
       scheduled_setpoint: !input scheduled_setpoint
-      current_temperature: "{{ states(''external_temperature'') | float }}"
-      current_scheduled_setpoint: "{{ states(''scheduled_setpoint'') | float }}"
+      current_temperature: "{{ states(external_temperature) | float }}"
+      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
   - condition: state
     entity_id: !input holiday_mode
     state: "off"
@@ -92,14 +92,14 @@ condition:
     for:
       minutes: 30
   - condition: template
-    value_template: "{{ states(external_temperature) | float < 10 }}"
+    value_template: "{{ states(current_temperature) | float < 10 }}"
 
 action:
   - variables:
       external_temperature: !input external_temperature
       scheduled_setpoint: !input scheduled_setpoint
-      current_temperature: "{{ states(''external_temperature'') | float }}"
-      current_scheduled_setpoint: "{{ states(''scheduled_setpoint'') | float }}"
+      current_temperature: "{{ states(external_temperature) | float }}"
+      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
