--- a/blueprint_room_climate_control_v7.yaml
+++ b/blueprint_room_climate_control_v7.yaml
@@ -20,8 +20,8 @@ blueprint:
           domain: sensor
           device_class: temperature
     scheduled_setpoint:
-      name: Scheduled Setpoint Sensor
-      description: Sensor to retrieve the scheduled setpoint temperature.
+      name: Scheduled Setpoint Helper
+      description: Input helper to retrieve the scheduled setpoint temperature.
       selector:
         entity:
           domain: sensor
@@ -74,32 +74,25 @@ trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: state
-    entity_id: !input thermostat
+    entity_id: "{{ thermostat }}"
     attribute: temperature
 
 condition:
-  - variables:
-      external_temperature: !input external_temperature
-      scheduled_setpoint: !input scheduled_setpoint
-      current_temperature: "{{ states(external_temperature) | float }}"
-      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
   - condition: state
-    entity_id: !input holiday_mode
+    entity_id: "{{ holiday_mode }}"
     state: "off"
   - condition: state
-    entity_id: !input occupancy_sensor
+    entity_id: "{{ occupancy_sensor }}"
     state: "off"
     for:
       minutes: 30
   - condition: template
-    value_template: "{{ states(current_temperature) | float < 10 }}"
+    value_template: "{{ states(external_temperature) | float < 10 }}"
 
 action:
   - variables:
-      external_temperature: !input external_temperature
-      scheduled_setpoint: !input scheduled_setpoint
       current_temperature: "{{ states(external_temperature) | float }}"
-      current_scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
+      scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
 
   - choose:
       - conditions:
@@ -108,9 +101,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ current_scheduled_setpoint + delta_above_10 }}"
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -119,9 +112,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ current_scheduled_setpoint + delta_10_to_5 }}"
+              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -129,9 +122,9 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ current_scheduled_setpoint + delta_5_to_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -139,13 +132,13 @@ action:
         sequence:
           - service: climate.set_temperature
             target:
-              entity_id: !input thermostat
+              entity_id: "{{ thermostat }}"
             data:
-              temperature: "{{ current_scheduled_setpoint + delta_below_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
     target:
-      entity_id: !input thermostat
+      entity_id: "{{ thermostat }}"
     data:
-      temperature: "{{ current_scheduled_setpoint }}"
+      temperature: "{{ scheduled_setpoint }}"
