--- a/blueprint_room_climate_control_v7.yaml
+++ b/blueprint_room_climate_control_v7.yaml
@@ -74,15 +74,15 @@ trigger:
   - platform: time_pattern
     minutes: "/15"
   - platform: state
-    entity_id: "{{ thermostat }}"
+    entity_id: !input thermostat
     attribute: temperature
 
 condition:
   - condition: state
-    entity_id: "{{ holiday_mode }}"
+    entity_id: !input holiday_mode
     state: "off"
   - condition: state
-    entity_id: "{{ occupancy_sensor }}"
+    entity_id: !input occupancy_sensor
     state: "off"
     for:
       minutes: 30
@@ -91,8 +91,10 @@ condition:
 
 action:
   - variables:
-      current_temperature: "{{ states(external_temperature) | float }}"
-      scheduled_setpoint: "{{ states(scheduled_setpoint) | float }}"
+      current_temperature_var: !input external_temperature
+      scheduled_setpoint_var: !input scheduled_setpoint
+      current_temperature: "{{ states(external_temperature_var) | float }}"
+      scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
 
   - choose:
       - conditions:
