--- a/blueprint_room_climate_control_v10.yaml
+++ b/blueprint_room_climate_control_v10.yaml
@@ -109,7 +109,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_above_10 }}"
+              temperature: "{{ scheduled_setpoint + delta_above_10 }}"
               hvac_mode: "heat"
 
       - conditions:
@@ -120,7 +120,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_10_to_5 }}"
+              temperature: "{{ scheduled_setpoint + delta_10_to_5 }}"
 
       - conditions:
           - condition: template
@@ -130,7 +130,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_5_to_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_5_to_0 }}"
 
       - conditions:
           - condition: template
@@ -140,7 +140,7 @@ action:
             target:
               entity_id: !input thermostat
             data:
-              temperature: "{{ scheduled_setpoint + var_delta_below_0 }}"
+              temperature: "{{ scheduled_setpoint + delta_below_0 }}"
 
   - delay: "00:30:00"
   - service: climate.set_temperature
