--- a/blueprint_room_climate_control_v11.yaml
+++ b/blueprint_room_climate_control_v11.yaml
@@ -74,8 +74,7 @@ trigger:
   - platform: time_pattern
     minutes: "/5"
   - platform: state
-    entity_id: !input thermostat
-    attribute: temperature
+    entity_id: !input scheduled_setpoint
 
 condition:
   - condition: state
