--- a/blueprint_room_climate_control_v11.yaml
+++ b/blueprint_room_climate_control_v11.yaml
@@ -77,6 +77,9 @@ trigger:
     entity_id: !input scheduled_setpoint
 
 condition:
+  - variables:
+      external_temperature_var: !input external_temperature
+      current_temperature: "{{ states(external_temperature_var) | float }}"
   - condition: state
     entity_id: !input holiday_mode
     state: "off"
@@ -85,8 +88,8 @@ condition:
     state: "on"
     for:
       minutes: 30
-#  - condition: template
-#    value_template: "{{ states(external_temperature) | float < 10 }}"
+  - condition: template
+    value_template: "{{ states(current_temperature) | float < 10 }}"
 
 action:
   - variables:
@@ -141,7 +144,7 @@ action:
             data:
               temperature: "{{ scheduled_setpoint + delta_below_0 }}"
 
-  - delay: "00:30:00"
+  - delay: "00:15:30"
   - service: climate.set_temperature
     target:
       entity_id: !input thermostat
