--- a/blueprint_room_climate_control_v13.yaml
+++ b/blueprint_room_climate_control_v13.yaml
@@ -69,6 +69,7 @@ blueprint:
       selector:
         entity:
           domain: binary_sensor
+mode: restart
 
 trigger:
   - platform: time_pattern
@@ -77,9 +78,9 @@ trigger:
     entity_id: !input scheduled_setpoint
 
 condition:
-  - variables:
-      external_temperature_var: !input external_temperature
-      current_temperature: "{{ states(external_temperature_var) | float }}"
+#  - variables:
+#      external_temperature_var: !input external_temperature
+#      current_temperature: "{{ states(external_temperature_var) | float }}"
   - condition: state
     entity_id: !input holiday_mode
     state: "off"
@@ -88,8 +89,8 @@ condition:
     state: "on"
     for:
       minutes: 30
-  - condition: template
-    value_template: "{{ states(current_temperature) | float < 10 }}"
+#  - condition: template
+#    value_template: "{{ states(current_temperature) | float < 10 }}"
 
 action:
   - variables:
@@ -150,4 +151,3 @@ action:
       entity_id: !input thermostat
     data:
       temperature: "{{ scheduled_setpoint }}"
-mode: restart
