--- a/blueprint_room_climate_control_v15.yaml
+++ b/blueprint_room_climate_control_v15.yaml
@@ -26,6 +26,14 @@ blueprint:
         entity:
           domain: sensor
           device_class: temperature
+    delta_above_15:
+      name: Delta for >15°C
+      description: Adjustment to setpoint when external temperature is above 15°C.
+      selector:
+        number:
+          min: -3
+          max: 3
+          step: 0.5
     delta_above_10:
       name: Delta for >10°C
       description: Adjustment to setpoint when external temperature is above 10°C.
@@ -108,12 +116,24 @@ action:
       scheduled_setpoint_var: !input scheduled_setpoint
       current_temperature: "{{ states(external_temperature_var) | float }}"
       scheduled_setpoint: "{{ states(scheduled_setpoint_var) | float }}"
+      delta_above_15: !input delta_above_15
       delta_above_10: !input delta_above_10
       delta_10_to_5: !input delta_10_to_5
       delta_5_to_0: !input delta_5_to_0
       delta_below_0: !input delta_below_0
 
   - choose:
+        - conditions:
+          - condition: template
+            value_template: "{{ current_temperature > 15 }}"
+        sequence:
+          - service: climate.set_temperature
+            target:
+              entity_id: !input thermostat
+            data:
+              temperature: "{{ scheduled_setpoint + delta_above_15 }}"
+              hvac_mode: "heat"
+              
       - conditions:
           - condition: template
             value_template: "{{ current_temperature > 10 }}"
