--- a/blueprint_test.yaml
+++ b/blueprint_test.yaml
@@ -15,3 +15,7 @@ blueprint:
           description: test
           selector:
             entity:
+  condition:
+    - condition: state
+      entity_id: input_boolean.holiday_mode
+      state: "off"
