--- a/blueprint_testv4.yaml
+++ b/blueprint_testv4.yaml
@@ -29,3 +29,10 @@ blueprint:
           filter:
             - domain:
                 - cover
+    thermostat:
+      name: Target Thermostat
+      description: Select the thermostat to control.
+      selector:
+        entity:
+          integration: ramses_cc
+          domain: climate
