--- a/blueprint_testv6.yaml
+++ b/blueprint_testv6.yaml
@@ -96,3 +96,7 @@ blueprint:
               sort: false
               custom_value: false
               mode: list
+  conditions:
+    - condition: state
+      entity_id: input_boolean.holiday_mode
+      state: "off"
